--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <title>SHOP</title>
 
-  <link rel="shortcut icon" sizes="32x32" href="/images/shop-icon-32.png">
+  <!-- <link rel="shortcut icon" sizes="32x32" href="/images/shop-icon-32.png"> -->
 
   <meta name="theme-color" content="#fff">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
-  <link rel="import" href="/src/shop-app.html" async>
+  <link rel="import" href="src/shop-app.html" async>
 
   <style>
 
@@ -76,7 +76,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       } else {
         // polyfill the platform!
         var e = document.createElement('script');
-        e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
+        e.src = 'bower_components/webcomponentsjs/webcomponents-lite.min.js';
         document.body.appendChild(e);
       }
     })();
