fixed route pattern

--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="shop-category-data.html">
+<!-- <link rel="import" href="shop-category-data.html"> -->
 <!-- Since 'home' is the default route, eagerly load it. -->
 <link rel="import" href="shop-home.html">
 <link rel="import" href="shop-guide.html">
@@ -221,7 +221,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-location route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
-        pattern="/omnitone-demo/:page"
+        pattern="/omnitone/:page"
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
