cleanup and beautify

--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -152,9 +152,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .drawer-list a {
+        font-size: 1.2em;
         display: block;
         padding: 0 16px;
-        line-height: 40px;
+        line-height: 56px;
         text-decoration: none;
         color: var(--app-secondary-color);
       }
