--- a/src/shop-home.html
+++ b/src/shop-home.html
@@ -34,10 +34,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .section.title {
         color: #FFFFFF;
-        background-color: #263238;
-        /*background: -moz-linear-gradient(top, rgba(84,110,122,1) 0%, rgba(38,50,56,1) 100%);
-        background: -ms-linear-gradient(top, rgba(84,110,122,1) 0%, rgba(38,50,56,1) 100%);
-        background: linear-gradient(to bottom, rgba(84,110,122,1) 0%, rgba(38,50,56,1) 100%);*/
+        background: #546e7a;
+        background: radial-gradient(ellipse farthest-side at 50% 0, #546e7a 0%,#263238 100%);
         text-align: center;
         padding-top: 50px;
         padding-bottom: 50px;
@@ -46,7 +44,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .section.title h1 {
         @apply(--paper-font-display3);
         font-size: 60px;
-        margin: 10px 30px;
+        margin: 15px 0;
         padding: 0;
       }
 
@@ -114,7 +112,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .section.demo {
         @apply(--paper-font-headline);
         color: #FFFFFF;
-        background-color: #263238;
+        background-color: #03A9F4;
         height: 180px;
         /*background: -moz-linear-gradient(top, rgba(84,110,122,1) 0%, rgba(38,50,56,1) 100%);
         background: -ms-linear-gradient(top, rgba(84,110,122,1) 0%, rgba(38,50,56,1) 100%);
@@ -186,6 +184,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
       .section.resources h2 {
         margin: 10px 10px 0 10px;
+        font-weight: 400;
       }
 
       .section.resources p {
