--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!--
 @license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+
 -->
 
 <!doctype html>
@@ -13,18 +8,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-
-  <title>SHOP</title>
-
-  <!-- <link rel="shortcut icon" sizes="32x32" href="/images/shop-icon-32.png"> -->
-
-  <meta name="theme-color" content="#fff">
   <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" href="images/favicon.ico">
+
+  <title>OMNITONE</title>
 
   <link rel="import" href="src/shop-app.html" async>
 
   <style>
-
     body {
       margin: 0;
       font-family: 'Roboto', 'Noto', sans-serif;
@@ -33,7 +24,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       min-height: 100vh;
     }
 
-    /* styling for render while resources are loading */
     shop-app[unresolved] {
       display: block;
       min-height: 101vh;
@@ -56,18 +46,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       top: 0;
       margin: 0;
       display: none;
-      z-index: 9999;
+      z-index: 999;
     }
   </style>
 
 </head>
 <body>
-
   <script>
-    window.performance && performance.mark && performance.mark('index.html');
-
-    Polymer = {lazyRegister: true, dom: 'shadow'};
-
+    // window.performance && performance.mark && performance.mark('index.html');
+    Polymer = { lazyRegister: true, dom: 'shadow' };
+    
     (function() {
       if ('registerElement' in document
           && 'import' in document.createElement('link')
@@ -82,8 +70,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     })();
   </script>
 
+  <!-- VR player -->
   <div id="demo-viewport"></div>
   <link rel="import" href="src/omnitone-viewer.html">
+
+  <!-- shell element -->
   <shop-app id="eShopAppShell" unresolved>OMNITONE</shop-app>
 
 </body>
