--- a/src/omnitone-landing.html
+++ b/src/omnitone-landing.html
@@ -128,7 +128,7 @@
 
     <app-header role="navigation" id="header" effects="waterfall" condenses reveals>
       <app-toolbar>
-        <div class="logo" title><a href="/" aria-label="OMNITONE Home">OMNITONE</a></div>
+        <div class="logo" title><a href="https://googlechrome.github.io/omnitone/" aria-label="OMNITONE">OMNITONE</a></div>
       </app-toolbar>
     </app-header>
 
