--- a/src/vr-player.html
+++ b/src/vr-player.html
@@ -294,7 +294,7 @@
         VRSamplesUtil.setContainerElementID('vrplayer-viewport');
         return _initializeComponents({
           targetElementID: 'vrplayer-viewport',
-          videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4',
+          videoUrl: 'media/resonance-h264-aac-1080p-45s.mp4',
           landingElement: landingElement
         });
       },
