fixing iOS button issue

--- a/src/vr-player.html
+++ b/src/vr-player.html
@@ -300,6 +300,7 @@
 
       initialize: function (landingElement) {
         VRSamplesUtil.setContainerElementID('vrplayer-viewport');
+        console.log('DemoViewer is ready.');
         return _initializeComponents({
           targetElementID: 'vrplayer-viewport',
           videoUrl: 'media/resonance-h264-aac-1080p-45s.mp4',
