fixing iOS button issue

--- a/src/vr-player.html
+++ b/src/vr-player.html
@@ -130,7 +130,7 @@
 
       return Promise.all([
         foaDecoder.initialize(),
-        vrPanoramicView.setVideoElement(videoElement)
+        // vrPanoramicView.setVideoElement(videoElement)
       ]).then(function () {
         console.log('[DEMO] Ambisonic decoder and VR Pano viewer initialized.');
         videoElement.pause();
