staging next version

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </script>
 
   <!-- VR content player -->
-  <div id="vrplayer-viewport"></div>
-  <link rel="import" href="src/vr-player.html">
+  <!-- <div id="vrplayer-viewport"></div>
+  <link rel="import" href="src/vr-player.html"> -->
 
   <!-- shell element (landing page) -->
-  <omnitone-landing unresolved>OMNITONE</omnitone-landing>
+  <omnitone-landing unresolved></omnitone-landing>
 
   <!-- ganalytics -->
   <script>
