--- a/src/vr-player.html
+++ b/src/vr-player.html
@@ -304,6 +304,7 @@
         return _initializeComponents({
           targetElementID: 'vrplayer-viewport',
           videoUrl: 'media/resonance-h264-aac-1080p-45s.mp4',
+          // videoUrl: 'https://storage.googleapis.com/omnitone-demo.google.com.a.appspot.com/resonance-h264-aac-1080p.mp4',
           landingElement: landingElement
         });
       },
