--- a/src/omnitone-landing.html
+++ b/src/omnitone-landing.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
-<link rel="import" href="../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
-<link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<!-- <link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html"> -->
+<!-- <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html"> -->
 <link rel="import" href="../bower_components/app-layout/helpers/helpers.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
@@ -20,8 +20,8 @@
       :host {
         display: block;
         position: relative;
-        padding-top: 130px;
-        padding-bottom: 64px;
+        padding-top: 0;
+        padding-bottom: 25px;
         min-height: 100vh;
         --app-primary-color: #202020;
         --app-secondary-color: #757575;
@@ -33,56 +33,27 @@
         color: var(--app-primary-color);
       }
 
-      app-header {
+      /*app-header {
         @apply(--layout-fixed-top);
         z-index: 1;
-        background-color: rgba(255, 255, 255, 0.95);
+        height: 212px;
+        color: #FFFFFF;
+        background: #546e7a;
+        background: radial-gradient(ellipse farthest-side at 50% 0, #546e7a 0%,#263238 100%);
+        text-align: center;
         --app-header-shadow: {
           box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.2);
           height: 10px;
           bottom: -10px;
         };
-      }
+      }*/
 
       paper-icon-button {
         color: var(--app-primary-color);
       }
 
-      .logo {
-        text-align: center;
-      }
-
-      .logo a {
-        font-size: 16px;
-        font-weight: 600;
-        letter-spacing: 0.3em;
-        color: var(--app-primary-color);
-        text-decoration: none;
-        /* required for IE 11, so this <a> can receive pointer events */
-        display: inline-block;
-        pointer-events: auto;
-      }
-
       [hidden] {
         display: none !important;
-      }
-
-      .drawer-list {
-        margin: 0 20px;
-      }
-
-      .drawer-list a {
-        font-size: 1.2em;
-        display: block;
-        padding: 0 16px;
-        line-height: 56px;
-        text-decoration: none;
-        color: var(--app-secondary-color);
-      }
-
-      .drawer-list a.iron-selected {
-        color: black;
-        font-weight: bold;
       }
 
       iron-pages {
@@ -96,8 +67,10 @@
         left: 0;
         right: 0;
         text-align: center;
-        margin: 20px;
+        margin: 40px;
         line-height: 24px;
+        @apply(--paper-font-title);
+        color: #90A4AE;
       }
 
       footer > a {
@@ -111,9 +84,7 @@
 
       /* small screen */
       @media (max-width: 767px) {
-        :host {
-          padding-top: 64px;
-        }
+
       }
     </style>
 
@@ -126,20 +97,23 @@
 
     <iron-media-query query="max-width: 767px" query-matches="{{smallScreen}}"></iron-media-query>
 
-    <app-header role="navigation" id="header" effects="waterfall" condenses reveals>
+    <!-- <app-header role="navigation" id="header" condenses reveals effects="waterfall resize-title">
       <app-toolbar>
-        <div class="logo" title><a href="https://googlechrome.github.io/omnitone/" aria-label="OMNITONE">OMNITONE</a></div>
+        <h1>Omnitone</h1>
       </app-toolbar>
-    </app-header>
+      <app-toolbar class="tall">
+        <h1>Omnitone</h1>
+        <h2>360&#176; Audio on the Web</h2>
+      </app-toolbar>
+    </app-header> -->
 
     <iron-pages role="main" selected="[[page]]" attr-for-selected="name" selected-attribute="visible">
       <omnitone-home id="eHome" name="home"></omnitone-home>
     </iron-pages>
 
-    <!-- <footer>
-      <a href="https://www.polymer-project.org/1.0/toolbox/">Made by Polymer</a>
+    <footer>
       chrome &#9829; VR
-    </footer> -->
+    </footer>
   </template>
 
   <script>
@@ -193,10 +167,10 @@
 
       attached: function () {
         // Initialize Omnitone library.
-        OmnitoneViewer.initialize(this).then(function () {
-          this.$.eHome.startDemoCallback = this.startDemo;
-          this.$.eHome.swapSpinnerToButton();
-        }.bind(this));
+        // OmnitoneViewer.initialize(this).then(function () {
+        //   this.$.eHome.startDemoCallback = this.startDemo;
+        //   this.$.eHome.swapSpinnerToButton();
+        // }.bind(this));
       },
 
       _routePageChanged: function(page) {
