--- a/src/omnitone-home.html
+++ b/src/omnitone-home.html
@@ -241,8 +241,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
 
     <div class="section text">
-      <p><strong>SAR</strong> (Spatial Audio Renderer) is a Javascript implementation of a 
-        <strong>first-order ambisonic</strong> decoder <br> that allows you to 
+      <p><strong>SAR</strong> (Spatial Audio Renderer) is a Javascript implementation of a
+        <strong>first-order ambisonic</strong> decoder <br> that allows you to
         <strong>binaurally render</strong> an ambisonic recording directly on the browser.
         </p>
     </div>
@@ -274,20 +274,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </li>
         <li>
           <h2>VR view</h2>
-          <p><a href="https://developers.google.com/vr/concepts/vrview/" target="_blank">VR view</a> 
+          <p><a href="https://developers.google.com/vr/concepts/vrview/" target="_blank">VR view</a>
             allows you to embed 360 degree VR media into websites on desktop and
             mobile, and native apps on Android and iOS.</p>
         </li>
-        <li>          
+        <li>
           <h2>Web Audio API</h2>
-          <p>Omnitone is written with <a href="https://webaudio.github.io/web-audio-api/" target="_blank">
-            Web Audio API</a> for the optimum audio processing in the interactive web apps.</p>
+          <p><strong>SAR</strong> is written with
+            <a href="https://webaudio.github.io/web-audio-api/" target="_blank">
+            Web Audio API</a> for the optimum audio processing in the
+            interactive web apps.</p>
         </li>
         <li>
           <h2>Web VR</h2>
-          <p><a href="https://webvr.info/" target="_blank">Web VR</a> is an experimental
-            Javascript API that provides access to Virtual Reality devices, such
-            as the Oculus Rift or GoogleCardboard, in your browser.</p>
+          <p><a href="https://webvr.info/" target="_blank">Web VR</a> is an
+            experimental Javascript API that provides access to Virtual Reality
+            devices, such as the Oculus Rift or GoogleCardboard, in your
+            browser.</p>
         </li>
       </ul>
     </div>
